--- a/src/app/confirmregister/confirmregister.component.html
+++ b/src/app/confirmregister/confirmregister.component.html
@@ -4,21 +4,21 @@
         <h1 *ngIf="outcome == 'success'">Registration confirmed!</h1>
         <h1 *ngIf="outcome == 'error'">Invalid registration</h1>
 
-        <div class="panel panel-default">
+        <div class="card">
 
-            <div class="panel-body" *ngIf="outcome == 'pending'">
+            <div class="card-body" *ngIf="outcome == 'pending'">
                 <p>Please wait, verifying registration...</p>
                 <spinner [spinnerSize]=2></spinner>
             </div>
             
-            <div class="panel-body" *ngIf="outcome == 'success'">
+            <div class="card-body" *ngIf="outcome == 'success'">
                 <p>Thank you. You can now log in and use our service.</p>
-                <div class="panel-body">
+                <div class="card-body">
                     <button routerLink="/login" class="btn btn-primary">Log in</button>
                 </div>
             </div>
             
-            <div class="panel-body" *ngIf="outcome == 'error'">
+            <div class="card-body" *ngIf="outcome == 'error'">
                 <p>It looks like your registration has failed to verify.</p>
                 <p>This may have been caused by one of the following reasons:</p>
                 <div>
@@ -29,7 +29,7 @@
                         <li>You haven't completed registration. Are you sure your browser finished submitting the form? Please try registering again.</li>
                     </ul>
                 </div>
-                <div class="panel-body">
+                <div class="card-body">
                     <button routerLink="/login" class="btn btn-primary">Log in</button>
                     <button routerLink="/register" class="btn btn-default">Register again</button>
                 </div>
