--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -1,32 +1,45 @@
 <confirmbox [data]="confirmBoxData" (response)="_router.navigate(['login']);"></confirmbox>
 <div class="container">
 
+    <h1>Forgot password</h1>
+
+    <h5>Please enter the e-mail address which you used for registration.</h5>
+
     <form class="form-horizontal" stopValidation [formGroup]="form">
+        <div class="card">
+            <div class="card-body">
 
-        <h1>Forgot password</h1>
-
-        <h5>Please enter the e-mail address which you used for registration.</h5>
-
-        <div class="form-group">
-            <div class="row">
-                <div class="col-sm-12 col-lg-2">
-                    <label for="email" class="control-label">E-mail</label>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-2">
+                            <label for="email" class="control-label">E-mail</label>
+                        </div>
+                        <div class="col-sm-12 col-lg-10">
+                            <input type="text" formControlName="email" class="form-control">
+                            <div *ngIf="form.controls.email.touched && form.controls.email.errors" class="alert alert-danger">{{ form.controls.email.errors.errorMsg }}</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-12 col-lg-10">
-                    <input type="text" formControlName="email" class="form-control">
-                    <div *ngIf="form.controls.email.touched && form.controls.email.errors" class="alert alert-danger">{{ form.controls.email.errors.errorMsg }}</div>
+
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-2">
+                            <label for="email" class="control-label"></label>
+                        </div>
+                        <div class="col-sm-12 col-lg-10">
+                            <div class="alert" (click)="serverResponse = null" *ngIf="serverResponse && serverResponse.message != ''" [class.alert-success]="serverResponse && serverResponse.result == 'success'"
+                                [class.alert-danger]="serverResponse && serverResponse.result == 'error'">{{ serverResponse.message }}</div>
+                            <button [disabled]="!form.dirty || !form.valid" class="btn btn-primary" (click)="submitForm()">Send</button>
+                            <button routerLink="/login" class="btn btn-default">Cancel</button>
+                            <spinner *ngIf="loading"></spinner>
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="alert" (click)="serverResponse = null" *ngIf="serverResponse && serverResponse.message != ''" [class.alert-success]="serverResponse && serverResponse.result == 'success'"
-                [class.alert-danger]="serverResponse && serverResponse.result == 'error'">{{ serverResponse.message }}</div>
-            <button [disabled]="!form.dirty || !form.valid" class="btn btn-primary" (click)="submitForm()">Send</button>
-            <button routerLink="/login" class="btn btn-default">Cancel</button>
-            <spinner *ngIf="loading"></spinner>
-        </div>
 
-</form>
+    </form>
 
 </div>
