--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -1,64 +1,65 @@
 <confirmbox [data]="confirmBoxData" (response)="logout($event)"></confirmbox>
 <header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-    <a class="navbar-brand" routerLink="/dashboard">
-        <img src="assets/pixeldog.svg" width="30" height="30" alt="Pixeldog">
-    </a>
+            <button class="navbar-toggler" (click)="showMenu = !showMenu" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
+        <a class="navbar-brand" routerLink="/dashboard">
+            <img src="assets/pixeldog.svg" width="30" height="30" alt="Pixeldog">
+        </a>
 
-            <!-- MENU ITEMS -->
+        <div class="collapse navbar-collapse" [class.show]="showMenu" id="navbarNavDropdown">
+            <ul class="navbar-nav">
 
-            <li class="nav-item dropdown" *ngIf="userLevel() > 1">
-                <div ngbDropdown class="d-inline-block">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" ngbDropdownToggle data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
-                        Users
-                    </a>
-                    <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" routerLink="/users">Manage users</a>
+                <!-- MENUS -->
+
+                <li class="nav-item dropdown" *ngIf="userLevel() > 1">
+                    <div ngbDropdown class="d-inline-block">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" ngbDropdownToggle data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            Users
+                        </a>
+                        <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a (click)="showMenu = false;" class="dropdown-item" routerLink="/users">Manage users</a>
+                        </div>
                     </div>
-                </div>
-            </li>
+                </li>
 
-            <li class="nav-item dropdown" *ngIf="userLevel() > 1">
-                <div ngbDropdown class="d-inline-block">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" ngbDropdownToggle data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
-                        Messages
-                    </a>
-                    <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" routerLink="/messages">Messages</a>
-                        <a class="dropdown-item" routerLink="/messagefolders">Message folders</a>
-                        <a class="dropdown-item" routerLink="/autoreplies">Predefined answers</a>
-                        <a class="dropdown-item" routerLink="/massmailer">Mass mailer</a>
+                <li class="nav-item dropdown" *ngIf="userLevel() > 1">
+                    <div ngbDropdown class="d-inline-block">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" ngbDropdownToggle data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            Messages
+                        </a>
+                        <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" routerLink="/messages">Messages</a>
+                            <a class="dropdown-item" routerLink="/messagefolders">Message folders</a>
+                            <a class="dropdown-item" routerLink="/autoreplies">Predefined answers</a>
+                            <a class="dropdown-item" routerLink="/massmailer">Mass mailer</a>
+                        </div>
                     </div>
-                </div>
-            </li>
+                </li>
 
-            <li class="nav-item dropdown" *ngIf="userLevel() > 1">
-                <div ngbDropdown class="d-inline-block">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" ngbDropdownToggle data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
-                        System
-                    </a>
-                    <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" routerLink="/settings">Settings</a>
-                        <a class="divider" role="separator"></a>
-                        <a class="dropdown-item" (click)="logoutDialog()">Log out</a>
+                <li class="nav-item dropdown" *ngIf="userLevel() > 1">
+                    <div ngbDropdown class="d-inline-block">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" ngbDropdownToggle data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            System
+                        </a>
+                        <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" routerLink="/settings">Settings</a>
+                            <a class="divider" role="separator"></a>
+                            <a class="dropdown-item" (click)="logoutDialog()">Log out</a>
+                        </div>
                     </div>
-                </div>
-            </li>
+                </li>
 
-            <!-- MENU ITEMS END HERE -->
+                <!-- MENU ITEMS END HERE -->
 
-        </ul>
-    </div>
-</nav>
+            </ul>
+        </div>
+    </nav>
 </header>
