--- a/src/app/resetpassword/resetpassword.component.html
+++ b/src/app/resetpassword/resetpassword.component.html
@@ -2,56 +2,59 @@
 <div class="container">
 
     <form class="form-horizontal" stopValidation [formGroup]="form">
+        <h1>Reset password</h1>
 
-          <h1>Reset password</h1>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                Please enter the new password
-            </div>
-            <div class="panel-body">
+        <div class="card">
+            <div class="card-body">
 
                 <div class="form-group">
-                    <label for="resetcode" class="col-sm-2 control-label">Reset code</label>
-                    <div class="col-sm-10">
-                        <input type="text" readonly formControlName="resetcode" class="form-control">
-                        <div *ngIf="form.controls.resetcode.touched && form.controls.resetcode.errors" class="alert alert-danger">{{ form.controls.resetcode.errors.errorMsg }}</div>
+                    <div class="row">
+                        <div class="col-lg-2 col-sm-12">
+                            <label for="resetcode">Reset code</label>
+                        </div>
+                        <div class="col-lg-10 col-sm-12">
+                            <input type="text" readonly formControlName="resetcode" class="form-control">
+                            <div *ngIf="form.controls.resetcode.touched && form.controls.resetcode.errors" class="alert alert-danger">{{ form.controls.resetcode.errors.errorMsg }}</div>
+                        </div>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="password" class="col-sm-2 control-label">Password (twice)</label>
-                    <div class="col-sm-5">
-                        <input type="password" formControlName="password_1" class="form-control">
-                    </div>
-                    <div class="col-sm-5">
-                        <input type="password" formControlName="password_2" class="form-control">
+                    <div class="row">
+                        <div class="col-lg-2 col-sm-12">
+                            <label for="password">New password (twice)</label>
+                        </div>
+
+                        <div class="col-lg-5">
+                            <input type="password" formControlName="password_1" class="form-control">
+                        </div>
+                        <div class="col-lg-5">
+                            <input type="password" formControlName="password_2" class="form-control">
+                        </div>
                     </div>
                 </div>
+
                 <div class="form-group">
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm-10">
-                        <div *ngIf="form.controls.password_1.dirty && form.controls.password_1.touched && 
+                    <div class="row">
+                        <div class="col-lg-2 col-sm-12"></div>
+                        <div class="col-lg-10 col-sm-12">
+                            <div *ngIf="form.controls.password_1.dirty && form.controls.password_1.touched && 
                                     form.controls.password_2.dirty && form.controls.password_2.touched && 
-                                    form.hasError('password')" 
-                                    class="alert alert-danger"
-                                    [innerHTML] = "form.errors.passwordErrorMessage" 
-                                    ></div>
-                     </div>
+                                    form.hasError('password')" class="alert alert-danger" [innerHTML]="form.errors.passwordErrorMessage"></div>
+                        </div>
+                    </div>
                 </div>
-                
+
                 <div class="form-group">
-                    <label class="col-sm-2 control-label"></label>
-                    <div class="col-sm-10">
-                        <div class="alert"
-                             (click)="serverResponse = null"
-                             *ngIf="serverResponse && serverResponse.message != ''"
-                             [class.alert-success]="serverResponse && serverResponse.result == 'success'" 
-                             [class.alert-danger]="serverResponse && serverResponse.result == 'error'"
-                             >{{ serverResponse.message }}</div>
-                        <button [disabled]="!form.dirty || !form.valid" class="btn btn-primary" (click)="submitForm()">Send</button>
-                        <button routerLink="/login" class="btn btn-default">Cancel</button>
-                        <spinner *ngIf="loading"></spinner>
+                    <div class="row">
+                        <div class="col-lg-2 col-sm-12"></div>
+                        <div class="col-lg-10 col-sm-12">
+                            <div class="alert" (click)="serverResponse = null" *ngIf="serverResponse && serverResponse.message != ''" [class.alert-success]="serverResponse && serverResponse.result == 'success'"
+                                [class.alert-danger]="serverResponse && serverResponse.result == 'error'">{{ serverResponse.message }}</div>
+                            <button [disabled]="!form.dirty || !form.valid" class="btn btn-primary" (click)="submitForm()">Send</button>
+                            <button routerLink="/login" class="btn btn-default">Cancel</button>
+                            <spinner *ngIf="loading"></spinner>
+                        </div>
                     </div>
                 </div>
 
