--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -8,7 +8,7 @@
             </button>
 
         <a class="navbar-brand" routerLink="/dashboard">
-            <img src="assets/pixeldog.svg" width="30" height="30" alt="Pixeldog">
+            <img src="assets/img/pixeldog.svg" width="30" height="30" alt="Pixeldog">
         </a>
 
         <div class="collapse navbar-collapse" [class.show]="showMenu" id="navbarNavDropdown">
